@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "18.09.2012"
-#define TIME_STR "22:18:18"
-#define SUB_VERS 1176-Mike
-#define SVN_VERS "ersky9x-r114"
+#define DATE_STR "21.09.2012"
+#define TIME_STR "18:20:44"
+#define SUB_VERS 1178-Mike
+#define SVN_VERS "ersky9x-r115"
 #define MOD_VERS "REVB"
